[UI] Horizontally footer content fixed vertical represented on mobile view.

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -106,13 +106,19 @@ footer {
 
   .copyright {
     font-size: 0.9rem;
-    margin-top: 1rem;
+    margin-top: 1.5rem;
     padding-top: 1rem;
     border-top: $coolgray 1px solid;
     display: flex;
     justify-content:space-evenly;
-    @media #{$tablet} {
+    @media (max-width:1000px) {
+      flex-direction: column;
       text-align: center;
+      .text{
+        text-align: center;
+        padding-top: 10px;
+        padding-bottom: 10px;
+      }
     }
   }
 
